fix: so & aisd lab